# OpStream

./: README.md  pyproject.toml
.github/workflows/: deploy-and-soaking-ec2.yml  deploy-and-soaking.yml
appointment-service/: README.md  app.py  curl_examples.sh  example_request.py  requirements.txt
mcp/: __init__.py  pyproject.toml  pyrightconfig.json
mcp/awslabs/cloudwatch_appsignals_mcp_server/: async_monitor.py  server.py
mcp/scripts/: DEPLOYMENT_NOTIFICATION_README.md  check_dynamodb_investigations.py  create_minimal_dynamodb_table.py  test_amazon_q_cli.py  test_async_with_db.py  test_complete_workflow.py  test_llm_investigation.py  test_llm_tokens.py  test_quick_investigation.py  test_scheduler.py  test_with_amazon_q.py
slackbot/: README.md  __init__.py  aws-kb-config-example.json  index.js  package.json  upload-document.js
slackbot/docs/: appsignals-faq.txt  ec2-example.txt
